--- a/about.html
+++ b/about.html
@@ -18,15 +18,8 @@
 	<content>
 		<h1>About</h1>
 
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-		non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		
-		</p>
+		<img src='https://creazilla-store.fra1.digitaloceanspaces.com/emojis/54221/sauropod-emoji-clipart-md.png'> </img>
+		<p>I am a dinosaur. Specifically a sauropod. Even more specifically an apatosaurus.</p>
 
 	</content>
 
