--- a/profile.html
+++ b/profile.html
@@ -14,9 +14,10 @@
 	</nav>
 <h1>ALL ABOUT CLARA <br> AKA SIXFOOTSAUROPOD</h1>
 
-<button id="color" class="color">My Favorite Color</button>
-<button id="place" class="place">My Favorite Place</button>
-<button id="ritual" class="ritual">My Favorite Ritual</button>
+<button id="color" class="buttons">My Favorite Color</button>
+<button id="place" class="buttons">My Favorite Place</button>
+<button id="ritual" class="buttons">My Favorite Ritual</button>
+
 
 <br><br>
 
